UV image editor Island selection mode fails in some condition #32933
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#32933
Loading…
Reference in New Issue
No description provided.
Delete Branch "%!s(<nil>)"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
%%%Hi! There are 2 basic cubes in attached .blend file (on layer 1 and 2). Both cubes unwrapped using simple scheme - 2 faces packed together (seam around pair of faces). As result of unwrap we should have 3 separate islands (6/2=3 if faces are adjacent). In UV image editor select island select mode and try to select each island for cube on layer 1 and for cube on layer 2. In first case 2 islands merge in one 4 face island (wrong behaviour) but in second we have three 2 faces island - that should be right behaviour I think. The behaviour defers because of order we select edges to make seam (and its weird).
I think it has some roots in vertex order for islands and their location but it works the same (wrong scenario) in all shared location selection modes.
%%%
Changed status to: 'Open'
%%%I can at least confirm this behaviour with the attached blend file. Although I could not recreate it with the default cube or from another added cube. Is there a way to recreate this behaviour from the default cube? That may help in finding the real problem here.
32-bit Kubuntu 12.04
Intel Core2 Quad Q6600@ 2.40GHz
NVidia 8800 GT - Driver version 304.43
Blender 2.64 r51483%%%
%%%I noticed if you add even a small amount of margin between the islands that they separate and no longer are selected together. You can add margin by first doing the unwrap from 3d view, and then in the operator properties dragging the margin setting.%%%
%%%Hi Anthony! You can recreate it by choosing different order in which you select edges to make a seam. Internals of this behaviour I don`t understand quite right.
There are some "workarounds" how to separate islands but in some cases they are not acceptable. For example we want place one UV-island on top of another similar island. After they "connected" we should use "workaround" again. Recently I wrote plugin for Blender which copies one uv-island in uv-coords of another (if they have same structure). Demo video is here http://www.youtube.com/watch?v=cNwvc6F-8Ik . After you watch video you can understand why this bug will interfere the smooth work-flow.%%%
%%%I think brecht added some small margin to the default unwrap operator a few days ago. Can you check with a new build?%%%
%%%Indeed, you should unwrap with a margin. The seams don't define connectivity in the UV editor, it's all based on the UV coordinates, and if they happen to be in the same place then they are considered connected. I can understand there's cases where this is not so useful but there's also cases where you unwrap and don't use seams .. so neither solution is perfect. I don't consider the current behavior a bug.
I did notice an issue where the default startup.blend had margin 0.0 still, fixed that now.%%%
Changed status from 'Open' to: 'Archived'