Fix related to #32933: UV unwrap had 0.0 margin by default in .blend files, change it now to 0.001 in existing files.